--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
         "styled-components": "^6.1.9",
+        "swiper": "^11.1.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
