--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^1.6.8",
         "bootstrap": "^5.3.3",
         "http-proxy-middleware": "^3.0.0",
+        "lottie-react": "^2.4.0",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.2",
         "react-dom": "^18.3.1",
