--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.13.0",
+        "@emotion/styled": "^11.13.0",
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-brands-svg-icons": "^6.5.2",
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@mui/material": "^5.16.4",
+        "@mui/styled-engine-sc": "^6.0.0-alpha.18",
         "@reduxjs/toolkit": "^2.2.6",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
@@ -16,6 +20,7 @@
         "bootstrap": "^5.3.3",
         "http-proxy-middleware": "^3.0.0",
         "lottie-react": "^2.4.0",
+        "lottie-web": "^5.12.2",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.2",
         "react-dom": "^18.3.1",
@@ -24,7 +29,7 @@
         "react-scripts": "5.0.1",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
-        "styled-components": "^6.1.9",
+        "styled-components": "^6.1.12",
         "swiper": "^11.1.4",
         "web-vitals": "^2.1.4"
     },
